nova_tests/plan138_5/neg/neg_safe_retired_standalone.nv
// Plan 138.5 NEG — the `safe` type-modifier is retired.
//
// `safe T` was a no-op propagation-stopper; in type position it is now a
// hard error with a migration hint (just drop `safe`).
//
// EXPECT_COMPILE_ERROR E_SAFE_RETIRED

module neg.neg_safe_retired_standalone

extern "nova" fn p(x safe int) -> ()
